--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netease",
+  "name": "TaiKu",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "boot.js",
@@ -8,13 +8,22 @@
     "start": "electron boot.js"
   },
   "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "bootstrap": "^3.3.6",
+    "electron-connect": "^0.3.7",
     "electron-prebuilt": "^0.36.0",
+    "font-awesome": "^4.5.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-sequence": "^0.4.5",
+    "jquery": "^2.2.0",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
-    "react": "^0.14.7"
+    "react": "^0.14.7",
+    "react-tooltip": "^1.1.2",
+    "webpack": "^1.12.13",
+    "webpack-target-electron-renderer": "^0.4.0"
   }
 }
