--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.0.5",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-newer": "^1.1.0",
     "gulp-sequence": "^0.4.5",
     "jquery": "^2.2.0",
     "jshint": "^2.9.1",
