--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.6",
     "electron-connect": "^0.3.7",
     "electron-prebuilt": "^0.36.0",
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-load-plugins": "^1.2.0",
@@ -24,6 +27,7 @@
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-tooltip": "^1.1.2",
     "webpack": "^1.12.13",
     "webpack-target-electron-renderer": "^0.4.0"
