--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "bootstrap": "^3.3.6",
     "electron-connect": "^0.3.7",
     "electron-prebuilt": "^0.36.0",
-    "font-awesome": "^4.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-jshint": "^2.0.0",
@@ -26,10 +25,18 @@
     "jquery": "^2.2.0",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-tooltip": "^1.1.2",
+    "shelljs": "^0.6.0",
     "webpack": "^1.12.13",
     "webpack-target-electron-renderer": "^0.4.0"
+  },
+  "dependencies": {
+    "font-awesome": "^4.5.0",
+    "i18next": "^2.1.0",
+    "material-ui": "^0.14.4",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-i18next": "^0.1.0",
+    "react-tap-event-plugin": "^0.2.2",
+    "react-tooltip": "^1.1.2"
   }
 }
